--- a/CookPopularControl/Themes/BaseStyle/DataGridBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/DataGridBaseStyle.xaml
@@ -25,8 +25,8 @@
                             <Button x:Name="SelectAllButton"
                                     Foreground="{Binding RelativeSource={RelativeSource AncestorType=DataGrid}, Path=Foreground}"
                                     Command="{x:Static DataGrid.SelectAllCommand}"
-                                    Style="{DynamicResource ButtonTransparentIconStyle}"
-                                    common:FrameworkElementBaseAttached.IconGeometry="{DynamicResource SelectAllGeometry}" />
+                                    common:FrameworkElementBaseAttached.IconGeometry="{DynamicResource SelectAllGeometry}"
+                                    Style="{DynamicResource ButtonTransparentIconStyle}" />
                             <!--<Polygon x:Name="Arrow" Fill="{Binding RelativeSource={RelativeSource AncestorType=DataGrid},Path=Foreground}" Points="0,10 10,10 10,0"
                                      HorizontalAlignment="Right" VerticalAlignment="Bottom" Stretch="Uniform"/>-->
                         </pc:SimpleGrid>
@@ -91,12 +91,12 @@
                                                     SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
                                                     ItemsPanel="{TemplateBinding ItemsPanel}" />
                             <DataGridDetailsPresenter Grid.Row="1" Grid.Column="1"
-                                                      Visibility="{TemplateBinding DetailsVisibility}"
-                                                      SelectiveScrollingGrid.SelectiveScrollingOrientation="{Binding RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}, Path=AreRowDetailsFrozen, Converter={x:Static DataGrid.RowDetailsScrollingConverter}, ConverterParameter={x:Static SelectiveScrollingOrientation.Vertical}}" />
+                                                      SelectiveScrollingGrid.SelectiveScrollingOrientation="{Binding RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}, Path=AreRowDetailsFrozen, Converter={x:Static DataGrid.RowDetailsScrollingConverter}, ConverterParameter={x:Static SelectiveScrollingOrientation.Vertical}}"
+                                                      Visibility="{TemplateBinding DetailsVisibility}" />
                             <DataGridRowHeader x:Name="PART_DataGridRowHeader"
                                                Grid.RowSpan="2"
-                                               Visibility="{Binding RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}, Path=HeadersVisibility, Converter={x:Static DataGrid.HeadersVisibilityConverter}, ConverterParameter={x:Static DataGridHeadersVisibility.Row}}"
-                                               SelectiveScrollingGrid.SelectiveScrollingOrientation="Vertical" />
+                                               SelectiveScrollingGrid.SelectiveScrollingOrientation="Vertical"
+                                               Visibility="{Binding RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}, Path=HeadersVisibility, Converter={x:Static DataGrid.HeadersVisibilityConverter}, ConverterParameter={x:Static DataGridHeadersVisibility.Row}}" />
                         </SelectiveScrollingGrid>
                         <VisualStateManager.VisualStateGroups>
                             <VisualStateGroup x:Name="CommonStates">
@@ -262,7 +262,7 @@
                                       HorizontalAlignment="{Binding RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}, Path=HorizontalContentAlignment}"
                                       VerticalAlignment="{Binding RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}, Path=VerticalContentAlignment}"
                                       pc:CheckBoxAssistant.FillBrush="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}, Path=Foreground}" />
-                            <Control SnapsToDevicePixels="False" Visibility="{Binding RelativeSource={RelativeSource AncestorType={x:Type DataGridRow}}, Path=(Validation.HasError), Converter={pt:BooleanToVisibilityConverter}}" Template="{Binding RelativeSource={RelativeSource AncestorType={x:Type DataGridRow}}, Path=ValidationErrorTemplate}" />
+                            <Control SnapsToDevicePixels="False" Template="{Binding RelativeSource={RelativeSource AncestorType={x:Type DataGridRow}}, Path=ValidationErrorTemplate}" Visibility="{Binding RelativeSource={RelativeSource AncestorType={x:Type DataGridRow}}, Path=(Validation.HasError), Converter={pt:BooleanToVisibilityConverter}}" />
                             <Thumb x:Name="PART_TopHeaderGripper" VerticalAlignment="Top" Style="{StaticResource DataGridRowHeaderGripperStyle}" />
                             <Thumb x:Name="PART_BottomHeaderGripper" VerticalAlignment="Bottom" Style="{StaticResource DataGridRowHeaderGripperStyle}" />
                         </pc:SimpleGrid>
@@ -344,12 +344,12 @@
                                               Width="15" Height="15"
                                               Foreground="{TemplateBinding Foreground}"
                                               IsChecked="{x:Null}"
-                                              Style="{StaticResource ToggleButtonTransparentDoubbleIconStyle}"
                                               IsHitTestVisible="False" common:FrameworkElementBaseAttached.IconHeight="7"
                                               common:FrameworkElementBaseAttached.IconMargin="0"
                                               common:FrameworkElementBaseAttached.IconWidth="14"
                                               pc:ToggleButtonAssistant.OnCheckedGeometry="{DynamicResource TopTriangleGeometry}"
-                                              pc:ToggleButtonAssistant.UnCheckedGeometry="{DynamicResource BottomTriangleGeometry}" />
+                                              pc:ToggleButtonAssistant.UnCheckedGeometry="{DynamicResource BottomTriangleGeometry}"
+                                              Style="{StaticResource ToggleButtonTransparentDoubbleIconStyle}" />
                                 <ContentPresenter Grid.RowSpan="2"
                                                   SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
                                                   HorizontalAlignment="{Binding RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}, Path=HorizontalContentAlignment}"
@@ -480,9 +480,9 @@
                                         <ScrollBar x:Name="PART_VerticalScrollBar" Grid.Row="1" Grid.Column="2"
                                                    Value="{Binding VerticalOffset, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}"
                                                    Maximum="{TemplateBinding ScrollableHeight}"
-                                                   Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}"
                                                    Orientation="Vertical"
-                                                   ViewportSize="{TemplateBinding ViewportHeight}" />
+                                                   ViewportSize="{TemplateBinding ViewportHeight}"
+                                                   Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}" />
                                         <Grid Grid.Row="2" Grid.Column="1">
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition Width="{Binding NonFrozenColumnsViewportHorizontalOffset, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}" />
@@ -491,9 +491,9 @@
                                             <ScrollBar x:Name="PART_HorizontalScrollBar" Grid.Column="1"
                                                        Value="{Binding HorizontalOffset, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}"
                                                        Maximum="{TemplateBinding ScrollableWidth}"
-                                                       Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}"
                                                        Orientation="Horizontal"
-                                                       ViewportSize="{TemplateBinding ViewportWidth}" />
+                                                       ViewportSize="{TemplateBinding ViewportWidth}"
+                                                       Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}" />
                                         </Grid>
                                     </Grid>
                                 </ControlTemplate>
