--- a/CookPopularControl/Themes/BaseStyle/SwitchButtonBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/SwitchButtonBaseStyle.xaml
@@ -1,14 +1,17 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:common="clr-namespace:CookPopularControl.Communal"
-                    xmlns:pc="clr-namespace:CookPopularControl.Controls">
+                    xmlns:pc="clr-namespace:CookPopularControl.Controls"
+                    xmlns:pt="https://Chance.CookPopularCSharpToolkit/2021/xaml">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/BaseStyle/ControlBaseStyle.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
     <Style x:Key="SwitchButtonBaseStyle" TargetType="{x:Type pc:SwitchButton}" BasedOn="{StaticResource SingleControlBaseStyle}">
-        <Setter Property="Width" Value="100" />
+        <Setter Property="Width" Value="60" />
+        <Setter Property="Height" Value="26" />
+        <Setter Property="FontSize" Value="10" />
         <Setter Property="BorderThickness" Value="0" />
         <Setter Property="Cursor" Value="Hand" />
         <Setter Property="HorizontalContentAlignment" Value="Center" />
@@ -26,10 +29,10 @@
                                     BorderThickness="{TemplateBinding BorderThickness}"
                                     Background="{TemplateBinding SwicthCloseBackground}"
                                     CornerRadius="{TemplateBinding common:FrameworkElementBaseAttached.CornerRadius}">
-                                <Canvas Background="Transparent">
+                                <pc:SimpleGrid Background="Transparent" Margin="3,0" HorizontalAlignment="Left">
                                     <Border x:Name="PART_CheckFlag"
-                                            Width="{TemplateBinding Height}"
-                                            Height="{TemplateBinding Height}"
+                                            Width="{TemplateBinding Height, Converter={pt:ValueTranslateToDoubleConverter}, ConverterParameter=0.8}"
+                                            Height="{TemplateBinding Height, Converter={pt:ValueTranslateToDoubleConverter}, ConverterParameter=0.8}"
                                             BorderBrush="{TemplateBinding BorderBrush}"
                                             BorderThickness="{TemplateBinding BorderThickness}"
                                             Background="{TemplateBinding Background}"
@@ -40,16 +43,15 @@
                                                    HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                                    VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
                                     </Border>
-                                </Canvas>
+                                </pc:SimpleGrid>
                             </Border>
                         </BulletDecorator.Bullet>
                     </BulletDecorator>
                     <ControlTemplate.Triggers>
                         <Trigger Property="HasContent" Value="true">
                             <Setter Property="FocusVisualStyle" Value="{StaticResource OptionMarkFocusVisual}" />
-                            <Setter Property="Padding" Value="4,0,0,0" />
                         </Trigger>
-                        <Trigger Property="IsEnabled" Value="false">
+                        <Trigger Property="IsEnabled" Value="False">
                             <Setter Property="Background" Value="{DynamicResource UnEnabledBrush}" />
                         </Trigger>
                         <Trigger Property="IsChecked" Value="True">
