--- a/MvvmTestDemo/DemoViews/NotifyDemo.xaml
+++ b/MvvmTestDemo/DemoViews/NotifyDemo.xaml
@@ -146,6 +146,42 @@
                         Content="OpenPopupMessageScroll"
                         Click="OpenPopupMessage_Click" />
             </WrapPanel>
+
+            <TextBlock Width="200" Height="34"
+                       Text="ToastMessage:"
+                       FontSize="20" FontWeight="DemiBold"
+                       Margin="0,30,0,0"
+                       HorizontalAlignment="Left" />
+            <WrapPanel>
+                <Button x:Name="OpenInfoToastMessage"
+                        Width="200" Height="34"
+                        Content="ShowInfoToastMessage"
+                        Click="OpenToastMessage_Click" />
+                <Button x:Name="OpenWarningToastMessage"
+                        Width="200" Height="34"
+                        Content="ShowWarningToastMessage"
+                        Margin="10,0"
+                        Click="OpenToastMessage_Click" />
+                <Button x:Name="OpenErrorToastMessage"
+                        Width="200" Height="34"
+                        Content="ShowErrorToastMessage"
+                        Click="OpenToastMessage_Click" />
+                <Button x:Name="OpenFatalToastMessage"
+                        Width="200" Height="34"
+                        Content="ShowFatalToastMessage"
+                        Margin="0,10,0,0"
+                        Click="OpenToastMessage_Click" />
+                <Button x:Name="OpenQuestionToastMessage"
+                        Width="200" Height="34"
+                        Content="ShowQuestionToastMessage"
+                        Margin="10,10,10,0"
+                        Click="OpenToastMessage_Click" />
+                <Button x:Name="OpenSuccessToastMessage"
+                        Width="200" Height="34"
+                        Content="ShowSuccessToastMessage"
+                        Margin="0,10,0,0"
+                        Click="OpenToastMessage_Click" />
+            </WrapPanel>
         </StackPanel>
     </pc:SimpleGrid>
 
