--- a/MvvmTestDemo/MainWindow.xaml
+++ b/MvvmTestDemo/MainWindow.xaml
@@ -12,8 +12,11 @@
                   xmlns:view="clr-namespace:MvvmTestDemo.DemoViews"
                   mc:Ignorable="d"
                   d:DataContext="{Binding Source={d:DesignInstance Type={x:Type local:MainWindowViewModel}}}"
+                  d:DesignHeight="450"
+                  d:DesignWidth="1000"
                   Title="CookPopularControl"
                   Height="800"
+                  ClientTitleBarHeight="30"
                   ResizeMode="CanResizeWithGrip"
                   WindowStartupLocation="CenterScreen"
                   WindowState="Normal"
@@ -100,7 +103,7 @@
             </ListBox>
             <ContentControl Grid.Column="1" Content="{Binding ControlContent}" />
         </Grid>
-        <view:ListsDemo Visibility="Visible" />
+        <view:DataGridDemo Visibility="Visible" />
 
         <!--  接收BubbleMessage的容器  -->
         <ScrollViewer Margin="0,10,10,10"
